@@ -41,11 +41,3 @@ class TestSK(unittest.TestCase):
         self.assertIn(date(2018, 12, 24), self.holidays)
         self.assertIn(date(2018, 12, 25), self.holidays)
         self.assertIn(date(2018, 12, 26), self.holidays)
-
-    def test_slovak_deprecated(self):
-        with warnings.catch_warnings(record=True) as w:
-            warnings.simplefilter("always")
-            slovakia = holidays.Slovak()
-            self.assertIsInstance(slovakia, holidays.Slovakia)
-            self.assertEqual(1, len(w))
-            self.assertTrue(issubclass(w[-1].category, DeprecationWarning))
